# cpp-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: input.txt
src/: Main.cpp  main.cpp
src/include/: BasicMemoryAllocation.h  Calculation.h  Cast.h  CompareTemplateFunction.h  CopyConstruction.h  Cpp11.h  DefaultConstructionClass.h  DefaultParams.h  ExtentionClass.h  FriendClass.h  FriendFunction.h  FunctionOverload.h  IOStream.h  InitialList.h  Inline.h  InnerClass.h  Namespace.h  NewAndDelete.h  Polymorphic.h  Reference.h  Singleton.h  Static.h  StdInputOutput.h  TemplateClass.h  default_params.h  std_input_output.h
src/lib/: Calculation.cpp  CalculationTest.cpp  DefaultConstructionClass.cpp  DefaultParams.cpp  FriendFunction.cpp  FunctionOverload.cpp  Inline.cpp  Reference.cpp  Static.cpp  default_params.cpp
